--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "api server for driverDash winodws phone app",
   "main": "driverDashApiServer.js",
   "dependencies": {
-    "express": "3.1.x"
+    "express": "3.1.x",
+	"pg": "0.6.15"
   },
   "engines": {
     "node": "0.10.x",
